# tasktimer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  file.c  file.h  gui.c  gui.h  main.c  main_gui.c  setting.json  task.json  ttimer.c  ttimer.h
